Memoize amended, may fix the issue on GitHub actions